students list clean up

--- a/src/app/controls/selects/group/app-select-group.control.html
+++ b/src/app/controls/selects/group/app-select-group.control.html
@@ -1,6 +1,7 @@
 <app-select-control
-  [valueString]="value"
+  [valueNumber]="value"
   [items]="items"
+  [type]="'NUMBER'"
   [hasEmpty]="true"
   (onChangeNumber)="onValueChanged($event)">
 </app-select-control>
