--- a/src/app/pages/groups/list/groups-list.page.html
+++ b/src/app/pages/groups/list/groups-list.page.html
@@ -56,7 +56,7 @@
         {{translationService.age().translate(group.age)}}
       </div>
       <div class="list-row-item app-groups-list-column-cabinets">
-        {{getGroupCabinet(group.id).name}}
+        {{getGroupCabinet(group.id).info.name}}
       </div>
       <div class="list-row-item app-groups-list-column-students">
         {{getGroupStudentsString(group.id)}}
