--- a/src/app/pages/staff-members/list/staff-members-list.page.html
+++ b/src/app/pages/staff-members/list/staff-members-list.page.html
@@ -2,7 +2,7 @@
   <app-header [activeSection]="'STAFF_MEMBERS'"></app-header>
 
   <div class="app-list-header">
-    <app-text-control
+    <app-text-control class="app-staff-members-list-column-name"
       [icon]="'fa-search'"
       [placeholder]="'Имя'"
       (onChange)="onSearchChange($event)">
