--- a/src/app/pages/students/card/pages/information/views/assign-group-popup/student-card-information-assign-group-popup.view.less
+++ b/src/app/pages/students/card/pages/information/views/assign-group-popup/student-card-information-assign-group-popup.view.less
@@ -6,5 +6,9 @@
 }
 
 .student-card-information-assign-group-popup-dates-column {
-  width: 50%;
+  width: 49%;
+}
+
+.student-card-information-assign-group-popup-dates-column-separator {
+  width: 2%;
 }
