--- a/src/app/pages/students/card/pages/payment/views/payment-add-popup/student-card-payment-add-popup.view.html
+++ b/src/app/pages/students/card/pages/payment/views/payment-add-popup/student-card-payment-add-popup.view.html
@@ -19,7 +19,7 @@
         [valid]="true">
         <app-select-staff-member-control
           [items]="staffMembers"
-          (onChange)="newStudentPayment.staffMemberLogin = $event">
+          (onChange)="newStudentPayment.info.staffMemberLogin = $event">
         </app-select-staff-member-control>
       </app-form-input-control>
     </div>
